--- a/Computer_order/Computer_order/App.config
+++ b/Computer_order/Computer_order/App.config
@@ -1,13 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Computer_order.Properties.Settings.dollarcomputersConnectionString"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Resources\dollarcomputers.mdb;Persist Security Info=True"
-            providerName="System.Data.OleDb" />
+        <add name="Computer_order.Properties.Settings.dollarcomputersConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Resources\dollarcomputers.mdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
 </configuration>
